--- a/index.html
+++ b/index.html
@@ -33,6 +33,32 @@
 
 .card-content {
   display: flex;
+  align-items: center;
+}
+
+.card-image {
+  width: 70px;
+  height: 70px;
+  border-radius: 0.5pc;
+}
+
+.card-text {
+  margin-left: 15px;
+  color: white;
+}
+
+.card-button {
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  font-size: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  margin-left: 94px;
+}
+</style>
+
   
 
 </body>
