--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <style>
   .card {
-  background-color: black;
+  background-color: white;
   color: black;
   width: 300px;
   padding: 20px;
@@ -44,7 +44,7 @@
 
 .card-text {
   margin-left: 15px;
-  color: white;
+  color: black;
 }
 
 .card-button {
