--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <body bgcolor="000">
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lunight</title>
 
 <h1 style="font-family: sans-serif; color: white;"> Lunight </h1>
@@ -48,8 +50,8 @@
 }
 
 .card-button {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   border: none;
   padding: 10px 20px;
   font-size: 10px;
