--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <div class="card">
   <div class="card-content">
-    <img src="IMAGE" class="card-image">
+    <img src="/images/esign.png" class="card-image">
     <div class="card-text">
       <h3 style="font-family: sans-serif;">ESign</h3>
     </div>
