--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="card-text">
       <h3 style="font-family: sans-serif;">ESign</h3>
     </div>
-    <a href="download">
+    <a href="itms-services://?action=download-manifest&url=https://sign.lunight.rf.gd/plists/esign.plist">
     <button class="card-button">GET</button>
     </a>
   </div>
