--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 <div class="card">
   <div class="card-content">
-    <img src="/images/scarlet.png" class="card-image">
+    <img src="/images/scarlet.jpeg" class="card-image">
     <div class="card-text">
       <h3 style="font-family: sans-serif;">Scarlet</h3>
     </div>
