--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lunight</title>
 
 <h1 style="font-family: sans-serif; color: white;"> Lunight </h1>
-<h3 style="font-family: sans-serif; color: white; text-align: center;"> iOS IPA Signer </h3>
+<p style="font-family: sans-serif; color: white; text-align: center;"> <strong> iOS IPA Signer </strong> </p>
 
 
   
