--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lunight</title>
   <meta property="og:title" content="Lunight iOS" />
 <meta property="og:description" content="Lunight is a FREE and no ad iOS IPA Signer." />
-<meta property="og:image" content="/images/loadingImage.png" />
+<meta property="og:image" content="/images/loadingImage.jpeg" />
 
 <h1 style="font-family: sans-serif; color: white;"> Lunight </h1>
 <p style="font-family: sans-serif; color: white; text-align: center;"> <strong> iOS IPA Signer </strong> </p>
