--- a/2ndsign.html
+++ b/2ndsign.html
@@ -6,6 +6,19 @@
     <meta property="og:description" content="Lunight x CocoCloud API is an iOS Enterprise Signing website."/>
     <meta property="og:image" content="https://sign.lunight.rf.gd/images/loadingImage.jpeg"/>
 
-    
+
+
+
+<!--styles-->
+
+<style>
+    body {
+     background: rgb(57,0,255);
+     background: linear-gradient(23deg, rgba(57,0,255,1) 0%, rgba(86,159,249,1) 47%, rgba(184,47,177,1) 100%);
+    }
+</style>
+
+
+
 </body>
 </html>
