--- a/2ndsign.html
+++ b/2ndsign.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <head>
     <title>Lunight</title>
     <meta property="og:title" content="Lunight x CocoCloud API"/>
     <meta property="og:description" content="Lunight x CocoCloud API is an iOS Enterprise Signing website."/>
     <meta property="og:image" content="https://sign.lunight.rf.gd/images/loadingImage.jpeg"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+
+
+
+
+
 
 
 
