--- a/2ndsign.html
+++ b/2ndsign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body src="https://th.bing.com/th/id/OIP.OK8g7CnYLQGmk1egKsGQtwHaEo?w=237&h=180&c=7&r=0&o=5&pid=1.7">
     <head>
     <title>Lunight</title>
     <meta property="og:title" content="Lunight x CocoCloud API"/>
@@ -46,11 +46,6 @@
 <!--styles-->
 
 <style>
-    body {
-     background: rgb(57,0,255);
-     background: linear-gradient(23deg, rgba(57,0,255,1) 0%, rgba(86,159,249,1) 47%, rgba(184,47,177,1) 100%);
-    }
-
     .card {
   background-color: white;
   color: black;
