--- a/2ndsign.html
+++ b/2ndsign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body src="https://th.bing.com/th/id/OIP.OK8g7CnYLQGmk1egKsGQtwHaEo?w=237&h=180&c=7&r=0&o=5&pid=1.7">
+<body bgcolor="000">
     <head>
     <title>Lunight</title>
     <meta property="og:title" content="Lunight x CocoCloud API"/>
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
-
+    <h1 style="font-family: sans-serif; color: white;"> Lunight </h1>
+    <p style="font-family: sans-serif; color: white; text-align: center;"> <strong> Lunight x CocoCloud API</strong> </p>
 
     <div class="card">
         <div class="card-content">
