--- a/2ndsign.html
+++ b/2ndsign.html
@@ -38,8 +38,15 @@
           </a>
         </div>
       </div>
+      
 
+      <br> 
 
+      
+      <a href="cert.zip">
+        <button style="background: rgb(57,0,255);
+    background: linear-gradient(23deg, rgba(57,0,255,1) 0%, rgba(210,39,39,1) 100%); font-size: 20px; color: black;"> Certificate Download </button>
+      </a>
 
 
 
