--- a/2ndsign.html
+++ b/2ndsign.html
@@ -4,7 +4,7 @@
     <head>
     <title>Lunight</title>
     <meta property="og:title" content="Lunight x CocoCloud API"/>
-    <meta property="og:description" content="Lunight x CocoCloud API is an iOS Enterprise Signing website."/>
+    <meta property="og:description" content="Lunight x CocoCloud API."/>
     <meta property="og:image" content="https://sign.lunight.rf.gd/images/loadingImage.jpeg"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,16 +39,6 @@
         </div>
       </div>
       
-
-      <br> 
-
-      
-      <a href="cert.zip">
-        <button style="background: rgb(57,0,255);
-    background: linear-gradient(23deg, rgba(57,0,255,1) 0%, rgba(210,39,39,1) 100%); font-size: 20px; color: black;"> Certificate Download </button>
-      </a>
-
-
 
 
 <!--styles-->
