--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="card-text">
       <h3 style="font-family: sans-serif;">ESign</h3>
     </div>
-    <a href="itms-services://?action=download-manifest&url=https://www.lunight.rf.gd/plists/esign.plist">
+    <a href="itms-services://?action=download-manifest&url=https://chxrgxr.github.io/plists/esign.plist">
     <button class="card-button"><strong>GET</strong></button>
     </a>
   </div>
@@ -33,7 +33,7 @@
     <div class="card-text">
       <h3 style="font-family: sans-serif;">Scarlet</h3>
     </div>
-    <a href="itms-services://?action=download-manifest&url=https://www.lunight.rf.gd/plists/scarlet.plist">
+    <a href="itms-services://?action=download-manifest&url=https://chxrgxr.github.io/plists/scarlet.plist">
     <button class="card-button"><strong>GET</strong></button>
     </a>
   </div>
